--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1185,7 +1185,7 @@ complete. It is, in general, difficult to select an appropriate value for
 $\alpha$ up-front as the best choice may depend on changeable system
 conditions, and no matter what value is selected it is possible that a
 configuration change may cause a pause if a phase-I message is unexpectedly
-delayed or a sudden burst of client requests are received.
+delayed or a burst of client requests are received.
 
 \begin{figure}[!t]
 \centering
